修改了跨域配置，使得项目可以通过前后端分离的形式进行部署

--- a/fox-doc-ui/api-ui/.env.development
+++ b/fox-doc-ui/api-ui/.env.development
@@ -4,10 +4,10 @@ VITE_APP_TITLE=API文档管理
 VITE_APP_ENV=online
 
 # 线上环境
-VITE_APP_BASE_URL_ONLINE=http://zyplayer.com
-VITE_APP_CUSTOM_URL_ONLINE=http://zyplayer.com
+VITE_APP_BASE_URL_ONLINE=http://127.0.0.1:8083
+VITE_APP_CUSTOM_URL_ONLINE=http://127.0.0.1:8083
 
 # 本地环境
-VITE_APP_BASE_URL_DEV=http://local.zyplayer.com:8083/zyplayer-doc
-VITE_APP_CUSTOM_URL_DEV=http://local.zyplayer.com:8083/zyplayer-doc
+VITE_APP_BASE_URL_DEV=http://127.0.0.1:8083/zyplayer-doc
+VITE_APP_CUSTOM_URL_DEV=http://127.0.0.1:8083/zyplayer-doc
 
