--- a/fox-doc-ui/db-ui/.env.development
+++ b/fox-doc-ui/db-ui/.env.development
@@ -2,8 +2,8 @@
 ENV = 'development'
 
 # base api
-VUE_APP_BASE_API = 'http://local.zyplayer.com:8083/zyplayer-doc'
-# VUE_APP_BASE_API = 'http://zyplayer.com'
+VUE_APP_BASE_API = 'http://127.0.0.1:8083/zyplayer-doc'
+# VUE_APP_BASE_API = 'http://127.0.0.1:8083'
 
 VUE_CLI_BABEL_TRANSPILE_MODULES = true
 
