--- a/fox-doc-ui/wiki-ui/.env.development
+++ b/fox-doc-ui/wiki-ui/.env.development
@@ -2,8 +2,8 @@
 ENV = 'development'
 
 # base api
-VITE_APP_BASE_API = 'http://local.zyplayer.com:8083/zyplayer-doc'
-# VITE_APP_BASE_API = 'http://zyplayer.com'
+VITE_APP_BASE_API = 'http://127.0.0.1:8083/zyplayer-doc'
+# VITE_APP_BASE_API = 'http://127.0.0.1:8083'
 
 
 
